--- a/wowpub.cn/pom.xml
+++ b/wowpub.cn/pom.xml
@@ -7,13 +7,21 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>wowpub.cn Maven Webapp</name>
   <url>http://maven.apache.org</url>
+  
   <dependencies>
     <dependency>  
          <groupId>javax.servlet</groupId>  
          <artifactId>javax.servlet-api</artifactId>  
          <version>3.1.0</version>  
          <scope>provided</scope>  
-    </dependency>  
+    </dependency> 
+    
+   <dependency>
+	    <groupId>mysql</groupId>
+	    <artifactId>mysql-connector-java</artifactId>
+		<version>5.1.24</version>
+	</dependency> 
+  
   </dependencies>
   <build>
     <finalName>wowpub.cn</finalName>
