--- a/wowpub.cn/src/main/webapp/WEB-INF/web.xml
+++ b/wowpub.cn/src/main/webapp/WEB-INF/web.xml
@@ -1,9 +1,13 @@
-<!DOCTYPE web-app PUBLIC
+ <!DOCTYPE web-app PUBLIC
  "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
-
+ "http://java.sun.com/dtd/web-app_2_3.dtd" > 
+ 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+  <context-param>
+  	<param-name>mysql_info</param-name>
+  	<param-value>127.0.0.1</param-value>
+  </context-param>
   <servlet>
   	<servlet-name>CreateUser</servlet-name>
   	<display-name>CreateUser</display-name>
