--- a/wowpub.cn/pom.xml
+++ b/wowpub.cn/pom.xml
@@ -21,6 +21,24 @@
 	    <artifactId>mysql-connector-java</artifactId>
 		<version>5.1.24</version>
 	</dependency> 
+	
+	<dependency>  
+         <groupId>commons-beanutils</groupId>  
+            <artifactId>commons-beanutils</artifactId>  
+            <version>1.9.1</version>  
+            <exclusions>  
+                <exclusion>  
+                    <groupId>commons-logging</groupId>  
+                    <artifactId>commons-logging</artifactId>  
+                </exclusion>  
+            </exclusions>  
+   </dependency>
+   
+   <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>1.1</version>
+   </dependency>
   
   </dependencies>
   <build>
