--- a/wowpub.cn/src/main/webapp/WEB-INF/web.xml
+++ b/wowpub.cn/src/main/webapp/WEB-INF/web.xml
@@ -4,10 +4,12 @@
  
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+  
   <context-param>
-  	<param-name>mysql_info</param-name>
-  	<param-value>127.0.0.1</param-value>
+    <param-name>log4jConfigLocation</param-name>
+    <param-value>classpath:log4j.properties</param-value>
   </context-param>
+ 
   <servlet>
   	<servlet-name>CreateUser</servlet-name>
   	<display-name>CreateUser</display-name>
